--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Basic styling */
 body {
+  color: antiquewhite;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,12 +9,12 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background-color: #fdfff8;
+  background-color: #000000;
 }
 /* Canvas container styling */
 #canvas-container {
   width: 80vh;
   height: 80vh;
-  outline: 2px solid #000b52; /* Acts like a border but outside the element */
+  /* outline: 2px solid #ffffff; */
   margin-top: 20px;
 }
